# handless

./: CHANGELOG.md  README.md  package.json
src/: bindings.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: actions.rs  lib.rs  settings.rs  stt_provider.rs  utils.rs
src-tauri/src/cloud_stt/: mod.rs  openai.rs
src-tauri/src/cloud_stt/realtime/: openai.rs
src-tauri/src/managers/: model.rs  transcription.rs
src-tauri/src/shortcut/: mod.rs
src-tauri/swift/: apple_intelligence.swift
src-tauri/tests/: cloud_stt.rs
src/components/onboarding/: ModelCard.tsx
src/components/settings/models/: LibraryTab.tsx  MyModelsTab.tsx
src/i18n/locales/ar/: translation.json
src/i18n/locales/cs/: translation.json
src/i18n/locales/de/: translation.json
src/i18n/locales/en/: translation.json
src/i18n/locales/es/: translation.json
src/i18n/locales/fr/: translation.json
src/i18n/locales/it/: translation.json
src/i18n/locales/ja/: translation.json
src/i18n/locales/ko/: translation.json
src/i18n/locales/pl/: translation.json
src/i18n/locales/pt/: translation.json
src/i18n/locales/ru/: translation.json
src/i18n/locales/tr/: translation.json
src/i18n/locales/uk/: translation.json
src/i18n/locales/vi/: translation.json
src/i18n/locales/zh/: translation.json
src/i18n/locales/zh-TW/: translation.json
src/lib/utils/: modelSettings.ts
src/stores/: settingsStore.ts
