[package]
name = "handless"
version = "0.2.10"
description = "Handless"
authors = ["elwin"]
edition = "2021"
license = "MIT"
default-run = "handless"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "handless_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# [[bin]]
# name = "cli"
# path = "src/audio_toolkit/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dependencies]
once_cell = "1"
tauri = { version = "2.9.1", features = [
  "protocol-asset",
  "macos-private-api",
  "tray-icon",
  'image-png',
] }
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-store = "2.4.2"
tauri-plugin-os = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-process = "2.3.1"
rusqlite_migration = "2.4.1"
tauri-plugin-fs = "2.4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { git = "https://github.com/rustdesk-org/rdev" }
cpal = "0.16.0"
anyhow = "1.0.95"
rubato = "0.16.2"
hound = "3.5.1"
log = "0.4.29"
env_filter = "1.0.0"
tokio = "1.50.0"
enigo = "0.6.1"
rodio = { git = "https://github.com/cjpais/rodio.git" }
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
base64 = "0.22"
percent-encoding = "2"
futures-util = "0.3"
rustfft = "6.4.0"
strsim = "0.11.0"
natural = "0.5.0"
regex = "1"
chrono = "0.4"
rusqlite = { version = "0.38", features = ["bundled"] }
tar = "0.4.44"
flate2 = "1.0"
uuid = { version = "1", features = ["v4"] }
handy-keys = "0.2.2"
ferrous-opencc = "0.3.0"
clap = { version = "4", features = ["derive"] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-dialog = "2"
window-vibrancy = "0.7"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-updater = "2.10.0"

[target.'cfg(not(all(target_os = "macos", target_arch = "x86_64")))'.dependencies]
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }

[target.'cfg(windows)'.dependencies]
transcribe-rs = { version = "0.3.8", features = [
  "whisper-cpp",
  "onnx",
  "whisper-vulkan",
  "ort-directml",
] }
windows = { version = "0.61", features = [
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
coreaudio-sys = "0.2"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSScreen", "NSGraphics"] }
objc2-foundation = { version = "0.3.2", features = ["NSGeometry"] }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
transcribe-rs = { version = "0.3.8", features = [
  "whisper-cpp",
  "onnx",
  "whisper-metal",
] }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
transcribe-rs = { version = "0.3.8", features = [
  "whisper-cpp",
  "whisper-metal",
] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk-layer-shell = { version = "0.8", features = ["v0_6"] }
gtk = "0.18"
transcribe-rs = { version = "0.3.8", features = [
  "whisper-cpp",
  "onnx",
  "whisper-vulkan",
] }

[patch.crates-io]
tauri-runtime = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.9.1" }
tauri-runtime-wry = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.9.1" }
tauri-utils = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.9.1" }

[features]
cloud-stt-tests = []

[dev-dependencies]
tempfile = "3"
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
